gap issue fixed

--- a/assets/app/css/tourfic-style.css
+++ b/assets/app/css/tourfic-style.css
@@ -16225,7 +16225,7 @@ html {
   line-height: 150%; /* 24px */
   position: relative;
   margin-bottom: 0px;
-  margin-right: 20px;
+  margin-right: 23px;
   cursor: pointer;
 }
 .tf-car-template-container .tf-car-booking-popup .tf-booking-popup-warp .tf-booking-content-wraper .tf-protection-content .tf-protection-featured table tr th .tf-protection-select label input {
