--- a/sass/app/css/free/car/car.scss
+++ b/sass/app/css/free/car/car.scss
@@ -146,7 +146,7 @@
                                             line-height: 150%; /* 24px */
                                             position: relative;
                                             margin-bottom: 0px;
-                                            margin-right: 20px;
+                                            margin-right: 23px;
                                             cursor: pointer;
                                             
                                             input{
